# glados-tts

./: .gitignore  engine.py  glados.py  hello.py  pyproject.toml  requirements-conda-gladostts-env-2025-04-14.txt  requirements-pip-freeze-2025-04-14.txt  run.ps1  test.rest
