[project]
name = "glados-tts-upstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deep-phonemizer~=0.0.19",
    "flask~=3.0.0",
    "inflect~=6.0.4",
    "nltk~=3.8.1",
    "numpy~=1.23.5",
    "pandas~=2.0.0",
    "pydub~=0.25.1",
    "scipy~=1.10.1",
    "torch~=2.0.0",
    "tqdm~=4.65.0",
    "unidecode~=1.3.6",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
explicit = true
